# CResourceIntake

./: CMakeLists.txt  README.en  README.ru
cri/: CMakeLists.txt  intake.py  resources.json
example/: CMakeLists.txt  main.cpp
